Updates on responsive design

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             </div>
 
             <div class="qoutes">
-                <p><i>Our lives begin to end the day we become silent about things that matter.</i><br> Martin Luther King Jr.</p>
-                <p><i>Injustice anywhere is a threat to justice everywhere.</i><br> Martin Luther King Jr.</p>
+                <p><i>"Our lives begin to end the day we become silent about things that matter."</i><br> Martin Luther King Jr.</p>
+                <p><i>"Injustice anywhere is a threat to justice everywhere."</i><br> Martin Luther King Jr.</p>
             </div>
 
             <div class="more-info">
